href for "Homepage" added

--- a/yacut/templates/header.html
+++ b/yacut/templates/header.html
@@ -8,7 +8,7 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="nav nav-pills">
             <li class="nav-item">
-              <a class="nav-link" href="">
+              <a class="nav-link" href="{{ url_for('index_view') }}">
                 <span style="color:rgb(0, 153, 177)">Главная</span>
               </a>
             </li>
